[project]
name = "escim"
version = "0.1.0"
description = "ESCIM: Enhanced Sequential Click-through and Conversion Modeling"
requires-python = ">=3.9,<3.12"
dependencies = [
    "fire==0.4.0",
    "joblib==1.2.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "scikit-learn==1.3.0",
    "torch>=2.0.0",
    "torcheval>=0.0.6",
]
